--- a/hanalife/hanalife/src/main/webapp/WEB-INF/web.xml
+++ b/hanalife/hanalife/src/main/webapp/WEB-INF/web.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" id="WebApp_ID" version="3.0">
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
+		 xmlns="http://java.sun.com/xml/ns/javaee"  
+		 xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" id="WebApp_ID" version="3.0">
   <display-name>practice</display-name>
-  
+  <!-- 그냥 넣어봄 -->
+  <absolute-ordering/>
   <servlet>
   	<servlet-name>dispatcher</servlet-name>
   	<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class> <!-- spring이 제공하고 있는 클래스 -->
@@ -11,7 +14,8 @@
   			classpath:config/spring/spring-mvc.xml
   		</param-value>
   	</init-param>
-  	<load-on-startup>1</load-on-startup>
+  	<load-on-startup>1</load-on-startup> 	
+  	<async-supported>true</async-supported>
   </servlet>
   
   <servlet-mapping>
